--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ group 'net.littlelite.kotlinlearn'
 version '1.0-SNAPSHOT'
 
 buildscript {
+    ext.kotlin_version = '1.0.0-beta-3595'
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:0.12.200'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -20,8 +21,11 @@ repositories {
 }
 
 dependencies {
-    compile 'org.jetbrains.kotlin:kotlin-stdlib:0.12.200'
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
 }
 
 
