--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,36 @@
 group 'net.littlelite.kotlinlearn'
 version '1.0-SNAPSHOT'
 
+apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = "net.littlelite.kotlinlearn.MainKt"
+
 buildscript {
-    ext.kotlin_version = '1.0.0-beta-3595'
+    ext.kotlin_version = '1.0.0-rc-1036'
     repositories {
         mavenCentral()
     }
     dependencies {
+        classpath group:'org.jetbrains.kotlin', name:'kotlin-gradle-plugin', version: kotlin_version
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-
-apply plugin: 'kotlin'
-apply plugin: 'application'
-
-mainClassName = "net.littlelite.kotlinlearn.KotlinlearnPackage"
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-}
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
+    test.java.srcDirs += 'src/test/kotlin'
 }
+
+dependencies {
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlin_version
+    testCompile group: 'junit', name: 'junit', version: junit_version
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+}
+
 
 
