--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ sourceSets {
 dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlin_version
     testCompile group: 'junit', name: 'junit', version: junit_version
+    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
 }
 
 
