--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ sourceSets {
     test.java.srcDirs += 'src/test/kotlin'
 }
 
+test {
+    reports.junitXml.destination = file('shippable/testresults')
+}
+
 dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlin_version
     testCompile group: 'junit', name: 'junit', version: junit_version
