--- a/build.gradle
+++ b/build.gradle
@@ -15,24 +15,27 @@ buildscript {
     }
 }
 
+jar {
+    manifest {
+        attributes ('Main-Class': 'net.littlelite.kotlinlearn.MainKt')
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 sourceCompatibility = 1.8
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
 
 test {
     reports.junitXml.destination = file('shippable/testresults')
 }
 
 dependencies {
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlin_version
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: kotlin_version
     testCompile group: 'junit', name: 'junit', version: junit_version
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
 }
