--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ test {
 }
 
 dependencies {
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: kotlin_version
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlin_version
     testCompile group: 'junit', name: 'junit', version: junit_version
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
 }
