--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,19 @@ mainClassName = "net.littlelite.kotlinlearn.MainKt"
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath group:'org.jetbrains.kotlin', name:'kotlin-gradle-plugin', version: kotlin_version
     }
+}
+
+repositories {
+    jcenter()
+}
+
+configurations {
+    ktlint
 }
 
 jar {
@@ -24,10 +32,6 @@ jar {
     }
 }
 
-repositories {
-    mavenCentral()
-}
-
 sourceCompatibility = 1.8
 
 test {
@@ -35,9 +39,28 @@ test {
 }
 
 dependencies {
+    ktlint group: 'com.github.shyiko', name: 'ktlint', version: '0.23.1'
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlin_version
     testCompile group: 'junit', name: 'junit', version: junit_version
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
+}
+
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "src/**/*.kt"
+    // to generate report in checkstyle format prepend following args:
+    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
+    // see https://github.com/shyiko/ktlint#usage for more
+}
+check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "-F", "src/**/*.kt"
 }
 
 
