--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
-group 'net.littlelite.kotlinlearn'
-version '1.1'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+    }
+}
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+
+group 'net.littlelite.kotlinlearn'
+version application_version
 
 mainClassName = "net.littlelite.kotlinlearn.MainKt"
 
@@ -23,15 +32,6 @@ configurations {
     ktlint
 }
 
-jar {
-    manifest {
-        attributes ('Main-Class': 'net.littlelite.kotlinlearn.MainKt')
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
 sourceCompatibility = 1.8
 
 test {
@@ -39,10 +39,30 @@ test {
 }
 
 dependencies {
-    ktlint group: 'com.github.shyiko', name: 'ktlint', version: '0.23.1'
+    ktlint group: 'com.github.shyiko', name: 'ktlint', version: '0.29.0'
+
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlin_version
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
+
     testCompile group: 'junit', name: 'junit', version: junit_version
-    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
+
+}
+
+jar {
+    baseName = 'kotlinlearn'
+    version =  application_version
+
+    doFirst {
+        from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    }
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
+
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': mainClassName
+        )
+    }
 }
 
 task ktlint(type: JavaExec, group: "verification") {
