--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
+/*
+ *  KOTLIN LEARN
+ *
+ *  MIT License (MIT)
+ *  Copyright (c) 2015-2020 Alessio Saltarin
+ *
+ */
+
 rootProject.name = 'KotlinLearn'
 
